PRD v1.2 — 기술 이슈 6건 반영
웹 탐색으로 발견한 기술 리스크를 각 해당 섹션에 반영:
- §1.4: Capacitor EventSource 비호환 버그 경고 추가 (Issue #6582)
- §4.1: Structured Concurrency를 Preview 상태로 명시 (JEP 505 5차 Preview)
- §4.1: Load Test를 k6 + xk6-sse 확장으로 수정 (k6 기본 빌드 SSE 미지원)
- §4.1: Resilience4j SB4 호환 미확정 경고 추가 (Issue #2351)
- §4.2: Resilience4j vs SB4 네이티브 resilience 비교 행 추가
- §6.2: Lettuce INCREX 미지원 가능성 및 Lua Script Fallback 명시 (Issue #3750)
- §6.3: Pinning은 JEP 491(Java 24)로 해결됨. 실제 위험을 ThreadLocal 블로트·MDC 소실로 재정의
- §6.6: Resilience4j TimeLimiter + Virtual Thread MDC 소실 시나리오 추가
- §10 Risk Matrix: Pinning 항목 하향 조정, 기술 이슈 3건 신규 추가

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>